--- a/styling.css
+++ b/styling.css
@@ -1,6 +1,9 @@
 html {
   height: 100%;
   background: radial-gradient(circle, #fff, #ccc);
+  background: -webkit-radial-gradient(circle, #fff, #ccc);
+  background: -o-radial-gradient(circle, #fff, #ccc);
+  background: -moz-radial-gradient(circle, #fff, #ccc);
 }
 #container {
   height: 400px;
@@ -90,6 +93,7 @@ html {
   -ms-transition: all 0.2s;
   transition: all 0.2s;
 }
+/* commented out because tablets do not have hover state
 .box:hover,
 #startreset:hover {
   background-color: #9c89f6;
@@ -98,6 +102,7 @@ html {
   -moz-box-shadow: 0px 4px #6b54d3;
   -webkit-box-shadow: 0px 4px #6b54d3;
 }
+*/
 .box:active,
 #startreset:active {
   box-shadow: 0px 0px #6b54d3;
@@ -143,6 +148,9 @@ html {
 height:200px;
 width:500px;
 background: linear-gradient(#F3CA6B,#F3706C);
+background: -webkit-linear-gradient(#F3CA6B,#F3706C);
+background: -o-linear-gradient(#F3CA6B,#F3706C);
+background: -moz-linear-gradient(#F3CA6B,#F3706C);
 color:white;
 font-size: 2.5em;
 text-align: center;
